//
//  CurrencesDictionary.swift
//  CurrencyConverter
//
//  Created by Olya Sabadina on 2023-05-02.
//

import Foundation

let currencesDictionary:[String:String] = [
"AUD":"Australia Dollar",
"AZN":"Azerbaijan Manat",
"BYN":"Belarus Rouble",
"CAD":"Canada Dollar",
"CHF":"Liechtenstein Franc",
"CNY":"China Yuan",
"CZK":"Czech Republic Koruna",
"DKK":"Denmark Kroner",
"EUR":"Euro",
"GBP":"British Pound Sterling",
"GEL":"Georgia Lari",
"HUF":"Hungary Forint",
"ILS":"Israel Shekel",
"JPY":"Japan Yen",
"KZT":"Kazakhstan Tenge",
"MDL":"Moldova Leu",
"NOK":"Norway Kroner",
"PLN":"Poland Zloty",
"SEK":"Sweden Krona",
"SGD":"Singapore Dollar",
"TMT":"Turkmenistan Manat",
"TRY":"Turkey Lira",
"UAH":"Ukraine Hryvnia",
"USD":"United States Dollar",
"UZS":"Uzbekistan Soum",
"XAU":"Gold"
]
